--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="outlines.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
     <div сlass="container">
       <title>Портфолио Junior верстальщика</title>
     </div>
@@ -10,7 +11,7 @@
 
   <body>
     <header class="page-header">
-      <div class="container">Контакты в шапке</div>
+    <div class="container">Контакты в шапке</div>
     </header>
 
     <section class="hero-image">
